# spot-prices

./: .gitignore  README.md  export.sql  mise.toml  pyproject.toml  state.json
.github/workflows/: prices.yml
.mise/tasks/: build  export.sql
spot_prices_fetcher/: __main__.py  cli.py
