[tool.poetry]
name = "spot-prices-fetcher"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.34.54"
boto3-stubs = {extras = ["ec2"], version = "^1.34.54"}
typer = "^0.9.0"
pygit2 = "^1.14.1"
pydantic = "^2.6.3"
orjson = "^3.9.15"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
